Created a docker image + container to build extensions
Created an image that links a volume between docker and the container. This container runs the npm scripts so that the scripts can be written to be run independently of the OS, and instead focus on running within the container.

At the end of the compose build commands a zip is created with the built binaries.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "pubFirefox": "(cd build && zip -r ../build.zip *) && open https://addons.mozilla.org/en-US/firefox/",
     "pub-ci": "(cd src && git clone -b development https://github.com/zeeguu-ecosystem/zeeguu-react.git && cd zeeguu-react && npm ci) && cp ./public/manifest.chrome.json ./build/manifest.json && npm-run-all build:* && zip -r build.zip build",
     "pub-ci-firefox": "(cd src && git clone -b development https://github.com/zeeguu-ecosystem/zeeguu-react.git && cd zeeguu-react && npm ci) && npm run buildFirefox && zip -r build.zip build",
+    "zip-build": "(cd build && zip -r ../build.zip *)",
+    "buildZipChrome": "npm run build && npm run zip-build",
+    "buildZipFirefox": "npm run buildFirefox && npm run zip-build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -45,7 +48,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
