--- a/truckconfig.json
+++ b/truckconfig.json
@@ -17,7 +17,7 @@
       "Sara Tolstrup Husum"
     ],
     [
-      "Mircea Filip Lungu",
+      "Mircea F. Lungu",
       "Mircea Lungu"
     ],
     [
