--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -3,7 +3,7 @@ FROM node
 RUN apt-get update
 RUN apt-get upgrade -y
 
-# Install a Zip archive
+# Install the zip package
 RUN apt-get -y install zip
 
 # Git
