--- a/public/manifest.firefox.json
+++ b/public/manifest.firefox.json
@@ -1,7 +1,7 @@
 {
   "name": "The Zeeguu Reader",
   "description": "The extension helps you read articles in the language that you want to practice and offers one-click translation and pronunciation.",
-  "version": "2.2.1",
+  "version": "2.2.2",
 
   "browser_specific_settings": {
     "gecko": {
@@ -9,15 +9,17 @@
     }
   },
 
-  "manifest_version": 2,
+  "manifest_version": 3,
   "permissions": [
     "storage",
     "activeTab",
     "tabs",
     "cookies",
+    "scripting",
     "https://www.zeeguu.org/",
     "https://api.zeeguu.org/",
-    "<all_urls>"
+    "<all_urls>",
+    "contextMenus"
   ],
 
   "browser_action": {
@@ -46,13 +48,18 @@
     "128": "/images/zeeguu128.png"
   },
   "web_accessible_resources": [
-    "images/translate.svg",
-    "images/sound.svg",
-    "images/zeeguuLogo.svg",
-    "https://zeeguu.org/static/images/trash.svg",
-    "https://zeeguu.org//static/images/yellow_star",
-    "https://zeeguu.org/static/images/file_rename_orange_36dp.svg",
-    "https://zeeguu.org/static/images/volume_up.svg",
-    "https://zeeguu.org/static/images/thumb_down_black_18dp.svg"
+    {
+      "resources": [
+        "images/translate.svg",
+        "images/sound.svg",
+        "images/zeeguuLogo.svg",
+        "https://zeeguu.org/static/images/trash.svg",
+        "https://zeeguu.org//static/images/yellow_star",
+        "https://zeeguu.org/static/images/file_rename_orange_36dp.svg",
+        "https://zeeguu.org/static/images/volume_up.svg",
+        "https://zeeguu.org/static/images/thumb_down_black_18dp.svg"
+      ],
+      "matches": ["<all_urls>"]
+    }
   ]
 }
