Introduce a Flag to call the correct browser api + Zeeguu Error
+ Added an error page when the extension is ran from the context menu. TO DO: Add a report error + go back button (so the user doesn't have to wait on the timer)
+ The flag allows the code to run in both Firefox and Chrome.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "installDepsWindows": "cd .\\src\\zeeguu-react && npm install && cd ..\\..\\. && mklink /d .\\node_modules .\\src\\zeeguu-react\\node_modules",
     "installDeps": "(cd src/zeeguu-react/ && npm install) && ln -s src/zeeguu-react/node_modules .",
     "start": "react-scripts start",
-    "prebuild": "rimraf build",
+    "prebuild": "rm -rf build",
     "build": "npm-run-all buildUnix:* && npm-run-all build:* && cp ./public/manifest.chrome.json ./build/manifest.json",
     "buildWindows": "copy .\\public\\manifest.chrome.json .\\build\\manifest.json && npm-run-all buildWindows:* && npm-run-all build:*",
     "buildUnix:popup": "INLINE_RUNTIME_CHUNK=false DISABLE_ESLINT_PLUGIN=true react-scripts build",
@@ -48,5 +48,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3"
+  }
 }
