--- a/public/manifest.firefox.json
+++ b/public/manifest.firefox.json
@@ -9,7 +9,7 @@
     }
   },
 
-  "manifest_version": 3,
+  "manifest_version": 2,
   "permissions": [
     "storage",
     "activeTab",
@@ -37,7 +37,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://*.zeeguu.org/*"],
+      "matches": ["*://*.zeeguu.org/*", "*://localhost/*"],
       "js": ["injectOnZeeguuOrg.js"]
     }
   ],
@@ -48,18 +48,13 @@
     "128": "/images/zeeguu128.png"
   },
   "web_accessible_resources": [
-    {
-      "resources": [
-        "images/translate.svg",
-        "images/sound.svg",
-        "images/zeeguuLogo.svg",
-        "https://zeeguu.org/static/images/trash.svg",
-        "https://zeeguu.org//static/images/yellow_star",
-        "https://zeeguu.org/static/images/file_rename_orange_36dp.svg",
-        "https://zeeguu.org/static/images/volume_up.svg",
-        "https://zeeguu.org/static/images/thumb_down_black_18dp.svg"
-      ],
-      "matches": ["<all_urls>"]
-    }
+    "images/translate.svg",
+    "images/sound.svg",
+    "images/zeeguuLogo.svg",
+    "https://zeeguu.org/static/images/trash.svg",
+    "https://zeeguu.org//static/images/yellow_star",
+    "https://zeeguu.org/static/images/file_rename_orange_36dp.svg",
+    "https://zeeguu.org/static/images/volume_up.svg",
+    "https://zeeguu.org/static/images/thumb_down_black_18dp.svg"
   ]
 }
