--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "react-scripts start",
     "prebuild": "rm -rf build",
     "build": "npm-run-all buildUnix:* && npm-run-all build:* && cp ./public/manifest.chrome.json ./build/manifest.json",
-    "buildWindows": "copy .\\public\\manifest.chrome.json .\\build\\manifest.json && npm-run-all buildWindows:* && npm-run-all build:*",
+    "buildWindows": "npm-run-all buildWindows:* && npm-run-all build:* && copy .\\public\\manifest.chrome.json .\\build\\manifest.json /Y",
     "buildUnix:popup": "INLINE_RUNTIME_CHUNK=false DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "buildWindows:popup": "SET INLINE_RUNTIME_CHUNK=false && SET DISABLE_ESLINT_PLUGIN=true && react-scripts build",
     "build:content": "webpack --mode production ./src/JSInjection/main.js --output-path ./build/",
