added own repo to modules and changed to correct import

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/zeeguu-react"]
 	path = src/zeeguu-react
-	url = git@github.com:zeeguu/web.git
+	url = git@github.com:Mlth/zeeguu-web.git
