Add elephant and update ArticleReader (#51)
* Implemented changes so they are the same as zeeguu/web

* Added the elephant.

* Changed text

* Removed articleId and added extension source to diffFeedbox

* Rearranged params

* Moved up functionality to update database with likes and difficulty feedback to modal.js

---------

Co-authored-by: Mircea Filip Lungu <mircea.lungu@gmail.com>

--- a/public/manifest.chrome.json
+++ b/public/manifest.chrome.json
@@ -42,6 +42,7 @@
         "images/translate.svg",
         "images/sound.svg",
         "images/zeeguuLogo.svg",
+        "images/zeeguuWhiteLogo.svg",
         "https://zeeguu.org/static/icons/zeeguu-icon-correct.png",
         "https://zeeguu.org/static/images/trash.svg",
         "https://zeeguu.org//static/images/yellow_star",
