Automatically zipping the sources - this is required by the pubFirefox where one needs to submit also the zipped source files

--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "pub": "zip -r build.zip build && open https://chrome.google.com/webstore/devconsole/7f6da896-c12c-4cb3-8ad7-b1641fc8efbc/ckncjmaednfephhbpeookmknhmjjodcd/edit/package",
     "buildFirefox": "npm-run-all buildUnix:* && npm-run-all build:* && cp ./public/manifest.firefox.json ./build/manifest.json",
     "buildFirefoxWindows": "npm-run-all buildWindows:* && npm-run-all build:* && copy .\\public\\manifest.firefox.json .\\build\\manifest.json /Y",
-    "pubFirefox": "(cd build && zip -r ../build.zip *) && open https://addons.mozilla.org/en-US/developers/addons",
+    "pubFirefox": "(cd build && zip -r ../build.zip *) && npm-run-all zipSources && open https://addons.mozilla.org/en-US/developers/addons",
     "pub-ci": "(cd src && git clone -b development https://github.com/zeeguu-ecosystem/zeeguu-react.git && cd zeeguu-react && npm ci) && cp ./public/manifest.chrome.json ./build/manifest.json && npm-run-all build:* && zip -r build.zip build",
     "pub-ci-firefox": "(cd src && git clone -b development https://github.com/zeeguu-ecosystem/zeeguu-react.git && cd zeeguu-react && npm ci) && npm run buildFirefox && zip -r build.zip build",
     "zip-build": "(cd build && zip -r ../build.zip *)",
     "buildZipChrome": "npm run build && npm run zip-build",
     "buildZipFirefox": "npm run buildFirefox && npm run zip-build",
+    "zipSources": "zip -r zeeguu-reader-source-code.zip . -x 'build/*' 'node_modules/*' 'src/zeeguu-react/node_modules/*' 'src/zeeguu-react/build/*' '.git/*' build.zip '.idea/*'",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
