--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mozilla/readability": "^0.4.1",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
     "@nivo/bar": "^0.83.0",
@@ -24,20 +25,25 @@
     "cross-env": "^7.0.3",
     "cross-fetch": "^4.0.0",
     "date-fns": "^2.19.0",
+    "dompurify": "^2.3.5",
     "email-validator": "^2.0.4",
+    "fast-levenshtein": "3.0.0",
     "js-cookie": "^3.0.1",
     "linked-list": "^3.0.1",
     "localized-strings": "^0.2.4",
     "moment": "^2.29.1",
+    "npm-run-all": "^4.1.5",
     "qs": "^6.10.3",
     "react": "^17.0.1",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-click-outside-hook": "^1.1.1",
+    "react-confetti": "^6.1.0",
     "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-idle-timer": "^5.7.2",
     "react-loader-spinner": "^4.0.0",
+    "react-modal": "^3.14.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
     "react-toastify": "^9.1.3",
@@ -45,12 +51,7 @@
     "styled-components": "^5.2.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.0",
-    "fast-levenshtein": "3.0.0",
-    "npm-run-all": "^4.1.5",
-    "@mozilla/readability": "^0.4.1",
-    "webpack-cli": "^4.9.2",
-    "react-modal": "^3.14.4",
-    "dompurify": "^2.3.5"
+    "webpack-cli": "^4.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -81,18 +82,18 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "babel-plugin-react-require": "^3.1.3",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@types/chrome": "^0.0.178",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.3",
+    "babel-plugin-react-require": "^3.1.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "prettier": "3.2.5",
     "svg-inline-loader": "^0.8.2",
     "webpack": "^5.76.0",
-    "wepack-cli": "0.0.1-security",
-    "prettier": "3.2.5"
+    "wepack-cli": "0.0.1-security"
   },
   "overrides": {
     "d3-color": "3.1.0",
