--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 REACT_APP_API_URL="https://api.zeeguu.org"
+REACT_APP_WEB_URL="https://www.zeeguu.org/"
 REACT_APP_EXTENSION_ID="ckncjmaednfephhbpeookmknhmjjodcd"
