--- a/public/manifest.firefox.json
+++ b/public/manifest.firefox.json
@@ -1,7 +1,7 @@
 {
   "name": "The Zeeguu Reader",
   "description": "The extension helps you read articles in the language that you want to practice and offers one-click translation and pronunciation.",
-  "version": "2.2.6",
+  "version": "2.2.7",
 
   "browser_specific_settings": {
     "gecko": {
@@ -37,7 +37,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://*.zeeguu.org/*", "*://localhost/*"],
+      "matches": ["*://*.zeeguu.org/*"],
       "js": ["injectOnZeeguuOrg.js"]
     }
   ],
