--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "installDeps": "(cd src/zeeguu-react/ && npm install) && ln -s src/zeeguu-react/node_modules .",
     "start": "react-scripts start",
     "prebuild": "rm -rf build",
-    "build": "npm-run-all buildUnix:* && npm-run-all build:* && cp ./public/manifest.chrome.json ./build/manifest.json",
+    "build": "npm-run-all buildUnix:* && npm-run-all build:* && rm ./build/manifest.* && cp ./public/manifest.chrome.json ./build/manifest.json",
     "buildWindows": "npm-run-all buildWindows:* && npm-run-all build:* && copy .\\public\\manifest.chrome.json .\\build\\manifest.json /Y",
     "buildUnix:popup": "INLINE_RUNTIME_CHUNK=false DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "buildWindows:popup": "SET INLINE_RUNTIME_CHUNK=false && SET DISABLE_ESLINT_PLUGIN=true && react-scripts build",
